--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
               <a href="/contact/">Contact</a>
             </li>
           </ul>
-          <p>&copy; 2014. {{ site.author.name }} All rights reserved. About my <a href="/software/2014/01/03/Swappping-From-Wordpress-to-Jekyll/">blog code</a></p>
+          <p>&copy; 2016. {{ site.author.name }} All rights reserved.</p>
           <a href="http://ir.linkedin.com/in/farhad-sotothe-105a5000"><img class="img-feed" src="/public/images/iconmonstr-linkedin-3-icon.svg"></img></a><a href="/atom.xml"><img class="img-feed" src="/public/images/iconmonstr-rss-3-icon.svg"></a><a href="https://github.com/sotothe/sotothe.github.io"><img class="img-feed" src="/public/images/iconmonstr-github-8-icon.svg"></a>
         </div>
       </div>
