--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
               <a href="/CV/">CV</a>
             </li>
             <li>
-              <a href="/articles/">Articles</a>
+              <a href="/publications/">Publications</a>
             </li>
              <li>
               <a href="/research/">Research</a>
