Mr Hyde was here …

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,7 @@
           </ul>
           <p>&copy; 2016. {{ site.author.name }} All rights reserved.</p>
 
-<!--
-          <a href="http://ir.linkedin.com/in/farhad-sotothe-105a5000"><img class="img-feed" src="/public/images/iconmonstr-linkedin-3-icon.svg"></img></a><a href="/atom.xml"><img class="img-feed" src="/public/images/iconmonstr-rss-3-icon.svg"></a><a href="https://github.com/sotothe/sotothe.github.io"><img class="img-feed" src="/public/images/iconmonstr-github-8-icon.svg"></a>
--->
+<!-- some codes omitted and copied on far_bot on telegram -->
 
         </div>
       </div>
