--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,10 @@ layout: default
   <h1>{{ page.title }}</h1>
       <span class="post-date">
     <img class="img-icon" src="/public/images/iconmonstr-calendar-5-icon.svg"></img>{{ page.date | date_to_string }}
-    <img class="img-icon" src="/public/images/iconmonstr-user-icon.svg"></img>{{ page.author }}
+    <img class="img-icon" src="/public/images/iconmonstr-user-icon.svg"></img>Sotothe
+<!--
+{{ page.author }}
+-->
 <!--
     <img class="img-icon" src="/public/images/iconmonstr-tags-3-icon.svg"></img>{% for categories in page.categories %} {{ categories }} {% if forloop.last != true %} {% endif %} {% endfor %}
 -->
