--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
 
     <header class="masthead">
       <div class="masthead-inner">
-			 <div class="img-circular"></div>
+	<p>English</p><a href="/Fa/">فارسی</a>
+	<div class="img-circular"></div>
         <h1>{{ site.title }}</h1>
         <p class="lead">{{ site.description }}</p>
 
