--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
   <body class="theme-base-alex">
 
     <header class="masthead">
+	    <p>English/<a href="/Fa/">فارسی</a></p>
       <div class="masthead-inner">
-	<p>English</p><a href="/Fa/">فارسی</a>
 	<div class="img-circular"></div>
         <h1>{{ site.title }}</h1>
         <p class="lead">{{ site.description }}</p>
