--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,12 @@
 
   <body class="theme-base-alex">
 
-    <header class="masthead">
-	    <p>English/<a href="/Fa/">فارسی</a></p>
-      <div class="masthead-inner">
+     <header class="masthead">
+	<div class="masthead-inner">
+	   <p>English/<a href="/Fa/">Persian</a></p>
+	</div>
+	
+	<div class="masthead-inner">
 	<div class="img-circular"></div>
         <h1>{{ site.title }}</h1>
         <p class="lead">{{ site.description }}</p>
@@ -31,8 +34,6 @@
             </li>
           </ul>
           <p>&copy; 2016. {{ site.author.name }} All rights reserved.</p>
-
-<!-- some codes omitted and copied on far_bot on telegram -->
 
         </div>
       </div>
