--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body class="theme-base-alex">
 
      <header class="masthead">
-	<div class="masthead-inner">
+	<div class="masthead-lang">
 	   <p>English/<a href="/Fa/">Persian</a></p>
 	</div>
 	
