--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -272,7 +272,7 @@ a:focus {
 .masthead-lang{
   padding: 20px;
   color: rgba(255,255,255,.5);
-  align: right;
+  text-align: right;
 }
 .masthead-inner {
   padding: 20px;
