--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
      <header class="masthead">
 	<div class="masthead-lang">
-	   <p>English/<a href="/Fa/">Persian</a></p>
+	   <p>English/<a href="http://sotothe.github.io/fa/index.html">Persian</a></p>
 	</div>
 	
 	<div class="masthead-inner">
@@ -33,7 +33,7 @@
               <a href="/contact/">Contact</a>
             </li>
           </ul>
-          <p>&copy; 2016. {{ site.author.name }} All rights reserved.</p>
+          <p>&copy; 2017. {{ site.author.name }} All rights reserved.</p>
 
         </div>
       </div>
