--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
      <header class="masthead">
 	<div class="masthead-lang">
-	   <p>English/<a href="http://sotothe.github.io/fa/index.html">Persian</a></p>
+	   <p>English/<a href="https://www.google.com/">PersianXXX</a></p>
 	</div>
 	
 	<div class="masthead-inner">
