--- a/fa/_layouts/default.html
+++ b/fa/_layouts/default.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fa" lang="fa-ir">
 
   {% include head.html %}
 
-  <body class="theme-base-alex">
+  <body dir="rtl" class="theme-base-alex">
 
      <header class="masthead">
 	<div class="masthead-lang">
-	   <p>English/<a href="http://sotothe.github.io/fa/">Persian</a></p>
+	   <p><a href="http://sotothe.github.io/">English</a>/فارسی</p>
 	</div>
 	
 	<div class="masthead-inner">
@@ -18,19 +18,19 @@
         <div class="colophon">
           <ul class="colophon-links">
              <li>
-              <a href="/">Blog</a>
+              <a href="/">وبلاگ</a>
             </li>
             <li>
-              <a href="/CV/">CV</a>
+              <a href="/CV/">درباره من</a>
             </li>
             <li>
-              <a href="/publications/">Publications</a>
+              <a href="/publications/">آثار</a>
             </li>
              <li>
-              <a href="/research/">Research</a>
+              <a href="/research/">مطالعات</a>
             </li>
              <li>
-              <a href="/contact/">Contact</a>
+              <a href="/contact/">تماس با من</a>
             </li>
           </ul>
           <p>&copy; 2017. {{ site.author.name }} All rights reserved.</p>
