--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
               <a href="/contact/">Contact</a>
             </li>
           </ul>
-          <p>&copy; 2017. {{ site.author.name }} All rights reserved.</p>
+          <p>&copy; {{ site.author.name }} All rights reserved.</p>
 
         </div>
       </div>
