--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -34,6 +34,17 @@ Learn more at http://andhyde.com or https://github.com/mdo/hyde.
  * Themes
  */
 
+/*
+Vazir font
+*/
+@font-face {
+  font-family: Vazir;
+  src: url('/fa/public/fonts/Vazir.eot');
+  src: url('/fa/public/fonts/Vazir.eot?#iefix') format('embedded-opentype'),
+       url('/fa/public/fonts/Vazir.woff') format('woff'),
+       url('/fa/public/fonts/Vazir.ttf') format('truetype');
+  font-weight: normal;
+}
 
 /*
  * Body resets
